tests/th/T22559a.stderr
T22559a.hs:7:2: error: [GHC-40746]
    Kind signatures are only allowed on GADTs
    When splicing a TH declaration:
      newtype D :: * = MkD GHC.Internal.Types.Int

